--- a/concepts/index.html
+++ b/concepts/index.html
@@ -228,7 +228,7 @@ A Plug always carries a single topic, in a single mode. When setting up a Plug u
 When no matching constraint set can be found out of all existing Integrations, the Plug can't be created and the two product instances won't be able to communicate. You can then build new integration, perhaps more generic, to cover your desired Plug's need, on one or both ends of the edge (see <a href="#integration">Integration</a>).</li>
 </ul>
 <p>You can plug two Instances using</p>
-<p><code>meshroom plug &lt;source_instance&gt; &lt;destination_instance&gt; &lt;topic&gt; [options...]</code></p>
+<p><code>meshroom plug &lt;topic&gt; &lt;source_instance&gt; &lt;destination_instance&gt; [options...]</code></p>
 <p>and unplug an existing plug using</p>
 <p><code>meshroom unplug &lt;topic&gt; &lt;source_instance&gt; &lt;destination_instance&gt; [options...]</code></p>
 <p>Note that there can only be one plug at a time for each set of constraints. You can get several plugs on the same Instances pair for the same topic by narrowing their constraint sets.</p>
